--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.property{
+  font-size: 18px;
+  color: rgba(7, 135, 32, 1);
+}
+.property:hover{
+  color: slategrey;
+  cursor: pointer;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.items{
+  display: flex;
+  justify-content: space-between;
 }
