--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  /*font-family: 'Indie Flower', cursive;*/
+  font-family: 'Anonymous Pro', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,11 +10,51 @@ body {
   color: rgba(7, 135, 32, 1);
 }
 .property:hover{
-  color: slategrey;
+  color: #616161;
+  border: 1px solid #616161;
   cursor: pointer;
 }
-
+.active{
+  color: #616161;
+  border: 1px solid #616161;
+}
 .items{
   display: flex;
   justify-content: space-between;
+}
+.Star{
+  margin-left: 15px;
+  margin-top: -2px;
+  color: red;
+}
+.savedPoints{
+  position: absolute;
+  margin: auto;
+  max-width: 900px;
+  left: 0;
+  right: 0;
+  margin-top: 100px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.header{
+  text-align: center;
+  font-size: 22px;
+  background-color: #0a7e38;
+  color: white;
+  padding: 10px;
+}
+.selectedPoint{
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.btn{
+  font-size: 16px;
+  border: 1px solid #0a7e38;
+  margin-left: 50px;
+}
+.nullPoints{
+  text-align: center;
+  padding: 20px;
+  font-size: 20px;
 }
